@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.quickfixj</groupId>
         <artifactId>quickfixj-parent</artifactId>
-        <version>2.0.0</version>
+        <version>2.1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>quickfixj-core</artifactId>
@@ -59,7 +59,7 @@
         <dependency>
             <groupId>org.apache.mina</groupId>
             <artifactId>mina-core</artifactId>
-            <version>2.0.16</version>
+            <version>2.0.17</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -383,7 +383,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>-Xmx512m -XX:MaxPermSize=256m -Djava.net.preferIPv4Stack=true</argLine>
+                    <argLine>-Xmx512m -Djava.net.preferIPv4Stack=true</argLine>
+                    <trimStackTrace>false</trimStackTrace>
                     <includes>
                         <include>**/*Test.java</include>
                         <include>${acceptance.tests}</include>
